--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
-layout: home
+layout: main
+home: true
 ---
+
+<h2>THIS IS ....</h2>
+<p>1213131313</p>
