Updated. The pages home, history, news, contacts are ready

--- a/contacts.html
+++ b/contacts.html
@@ -1,8 +1,27 @@
 ---
 layout: main
-title: Контакти
-order: 3
+title: КОНТАКТИ
+order: 4
 permalink: /contacts/
+css: contacts
 ---
 
-<h2>Some contacts</h2>
+<main>
+    <h2>Контакти</h2>
+    <section class="contacts">
+        <ul class="first-part">
+            <li><i class="fas fa-phone-volume"></i>0899 55 55 92</li>
+            <li><i class="fas fa-envelope"></i>university@softuni.bg</li>
+            <li><i class="fas fa-clock"></i>Понеделник - Петък: 09:00 - 18:00</li>
+            <li><i class="fas fa-map-marked"></i>София, кв.Изгрев, ул. "Тинтява" 15-17, етаж 1</li>
+        </ul>
+        <ul class="second-part">
+            <h4>Последвайте ни:</h4>
+            <ul class="social-icons">
+                <li><a href="https://www.facebook.com/SoftwareUniversity/" class="facebook"><i
+                            class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/softunibg" class="twitter"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+        </ul>
+    </section>
+</main>
