--- a/index.html
+++ b/index.html
@@ -1,7 +1,53 @@
 ---
 layout: main
 home: true
+title: НАЧАЛО
+order: 0
+css: index
 ---
 
-<h2>THIS IS ....</h2>
-<p>1213131313</p>
+<main>
+    <section class="news-section">
+        <h2>Новини</h2>
+        <ul class="news">
+            <li>
+                <h3>Удължава се маршрутът на тролейбусна линия № 7 до ж.к. „Гоце Делчев“</h3>
+                <p class="date">13.07.2019г.</p>
+                <p class="news-description">Oт 13.07.2019 год. за срок от 6 месеца се удължава маршрутът на
+                    тролейбусна линия № 7: ж.к. Люлин 3-УХО – Сточна гара – ж.к. „Гоце Делчев“. Тролейбусна линия №
+                    7 ще спира на всички съществуващи спирки в удължения участък от маршрута.</p>
+            </li>
+            <li>
+                <h3>София обновява градския транспорт с 82 електробуса, 30 тролея и 25 трамвая</h3>
+                <p class="date">11.07.2019г.</p>
+                <p class="news-description">Днес СОС одобри Столичната община да кандидатства по ОП "Околна среда
+                    2014-2020 г." за доставка на нови електробуси, тролейбуси, трамваи и станции за зареждане.
+                    Общият размер на средствата за директно предоставяне на безвъзмездна финансова помощ за София е
+                    218 млн. лв.</p>
+            </li>
+            <li>
+                <h3>До 16.09.2019г. се удължава временното изместване на спирка „Хипермаркет Била”</h3>
+                <p class="date">8.07.2019г.</p>
+                <p class="news-description">До 16.09.2019 г. се удължава временното изместване на
+                    спирка с код 2108 „Хипермаркет Била” на бул. „Владимир Вазов”, напред при бензиностанция „Шел“ в
+                    посока ул. ”Черковна”.</p>
+            </li>
+        </ul>
+        <p class="action">
+            <a href="{{ site.baseurl }}/news">Виж всички<i class="fas fa-chevron-right"></i></a>
+        </p>
+    </section>
+    <section class="newinsite-section">
+        <h2>Какво ново има в сайта?</h2>
+        <p>Лорем Ипсум</p>
+    </section>
+    <section class="subscribe-section">
+        <h2>Абониране за нашия бюлетин</h2>
+        <p>Получавай актуална информация за - маршрутни промени, изместване и закриване на спирки, промени в
+            разписанията и др.</p>
+        <div class="subscribe">
+            <input type="email" name="email" id="email" placeholder="Email">
+            <input type="submit" value="Абонирай се">
+        </div>
+    </section>
+</main>
