Changed img paths

--- a/history.html
+++ b/history.html
@@ -11,7 +11,7 @@ css: history
         <h2>История на автобусния транспорт</h2>
         <p>За разлика от другите видове транспорт, автобусите навлизат по-късно за обслужване на пътническия градски
             транспорт на София.</p>
-        <img src="/img/bus1.gif" class="left">
+        <img src="../img/bus1.gif" class="left">
         <p>На 20 април 1935 г. е пусната в експлоатация първата автобусна линия в София. По-късно са открити още
             шест линии с обща дължина 23 км. Подвижния състав на този вид транспорт бил представен от 10 автобуса
             "Прага". До 1940 г. са доставени 10 броя автобуси "МАН" и 6 броя "Мерцедес".</p>
@@ -20,20 +20,20 @@ css: history
             осъществява с наличните 8 коли.През 1949 г. е построено първото автобусно депо "Христо Михайлов" за 60
             броя автобуси. По същото време се доставят и 15 автобуса "ЛАЗ", производство на Лвовски автомобилен
             завод. През 1950 г. се извършва доставка от Чехия на 11 метрови автобуси "Шкода РТО".</p>
-        <img src="/img/bus2.gif" class="right">
+        <img src="../img/bus2.gif" class="right">
         <p>През месец януари 1952 г. се създава Стопанско предприятие (СП) "Софийски автотранспорт", на директно
             подчинение на Софийска община, в което влизат товарният транспорт (състоящ се предимно от автомобили
             "ЗИС" и "ЗИС- пят"), автобусите и таксиметровите автомобили.</p>
-        <img src="/img/bus4.gif" class="left">
+        <img src="../img/bus4.gif" class="left">
         <p>На 22.06.1959 г. СП "Софийски автотранспорт" влиза в състава на СП "Градски пътнически транспорт" до
             01.07.1964 г., когато става самостоятелно звено "Клон-2" към същото стопанско предприятие. От 1964 г.
             започва производство на автобуси на завод "Чавдар" в Ботевград. През 1968 г. се доставя и първият
             съчленен "Икарус 180" и първият съчленен "Чавдар В 14-20". През 1974г. са внесени първите 100 бр.
             съчленени автобуси "Икарус 280" от Унгария.</p>
-        <img src="/img/bus3.gif" class="right">
+        <img src="../img/bus3.gif" class="right">
         <p>Ежегодно нарастват превозните възможности на градския автобусен транспорт. Докато през 1965 г. в състава
             няма нито един съчленен автобус, към 01.01.1988 г. те са вече 872 броя. </p>
-        <img src="/img/bus5.gif" class="left">
+        <img src="../img/bus5.gif" class="left">
         <p>През 1969 г. започва доставка на нов тип автобуси "Чавдар 11 Г5", производство на завод "Чавдар"
             Ботевград.</p>
         <p>За периода 1980 г. - 1988 г. са доставени общо 919 съчленени автобуси и 478 единични, които подменят
@@ -42,13 +42,13 @@ css: history
             предприятия се преобразуват в общински фирми. От 1990г. се създава и четвърта общинска фирма за
             автобусен транспорт ФАТ-4 "Република". В началото на 1993 г. четирите общински фирми влизат в състава на
             новосъздаденото ЕООД Столична компания за градски транспорт.</p>
-        <img src="/img/bus6.gif" class="right">
+        <img src="../img/bus6.gif" class="right">
         <p>За последните пет години са доставени нови модерни автобуси: 1996 г. - 30 броя "Чавдар 141" -
             съчленени,производство на завода в Ботевград с МАН - агрегати.</p>
-        <img src="/img/bus8.jpg" class="left">
+        <img src="../img/bus8.jpg" class="left">
         <p>За последните десет години е подменена голяма част от остарелите автобуси "Икарус" и "Чавдар" с автобуси
             "Мерцедес" втора употреба, в много добро техническо състояние.</p>
-        <img src="/img/bus9.jpg" class="right">
+        <img src="../img/bus9.jpg" class="right">
         <p>Закупуват се и нови автобуси през: 1998 г. - 41 броя "Мерцедес 345" - съчленени и 21 броя "МАН" -
             единични. 1999 г. - 30 броя "МАН 262" - съчленени. 2000 г. - 6 броя "Мерцедес 0345" - единични. От
             19.05.1998г. се създава СКГТ - Автотранспорт - ЕАД, което от 08.12.1999г. е самостоятелно Акционерно
@@ -66,7 +66,7 @@ css: history
             на 14 февруари 1941 г. с откриването на първата тролейбусна линия от спирка "Горнобански път" до Горна
             баня.
             Дължината на линията е 3,3 км, като е обслужвана само от два тролейбуса.</p>
-        <img src="/img/trolley1.gif" class="left">
+        <img src="../img/trolley1.gif" class="left">
         <p>Функционирането на тролейбусния транспорт до края на на Втората световна война е затруднено от различни
             причини; като основните са войната и невъзможността да се доставят части от чужбина за поддържане на
             подвижния състав, нови тролейбуси за неговото увеличаване, електрическата мрежа.
@@ -77,11 +77,11 @@ css: history
             През 1951 г. е усвоено българско производство на тролейбуси от типа "ТБ-51" ("МТБ-82").
             През 1961 г. се пуска в експлоатация депо "Надежда" с капацитет 100 тролейбуса.
             От 1964 г. се доставят чешки тролейбуси "Шкода -9Тр" , с контакторно управление.</p>
-        <img src="/img/trolley2.gif" class="right">
+        <img src="../img/trolley2.gif" class="right">
         <p>През 1986 г. са доставени 12 бр. съчленени тролейбуси "МАН" - втора употреба.
             През следващите години тролейбусния парк е типизиран изцяло с тролейбуси "Шкода-9ТрН" с тиристорно
             управление. </p>
-        <img src="/img/trolley3.gif" class="left">
+        <img src="../img/trolley3.gif" class="left">
         <p>За периода 1980 г.-1989 г. са внесени следните марки и бройки тролейбуси:1984 г. - 20 бр.
             "Шкода
             14 Тр"-единични, нови с импулсно управление с тиристорен преобразовател; 1985 г. - 18 бр. "Граф и Щифт"
@@ -100,7 +100,7 @@ css: history
             През 1994г. във фирма "ТРАМКАР" е произведен 1 бр. тролейбус "ТК-130" с електронно контакторно
             управление,
             който е пуснат в редовна експлоатация през 1997 г.</p>
-        <img src="/img/trolley4.gif" class="right">
+        <img src="../img/trolley4.gif" class="right">
         <p>Към 2002 год. тролейбусният транспорт извършва превоз на пътници по 10 линии с обща дължина 105,5 км. В
             делнични дни работят 111 тролейбуса , обслужвани от 220 водачи.
             Развитието на тролейбусния парк съпътства изграждането на тролейбусната мрежа, общата дължина на която е
@@ -115,7 +115,7 @@ css: history
         <h2>История на софийския трамвай</h2>
         <p>В края на 19 век в София се появява конският омнибус с постоянно действащи линии от Гурковския площад
             (площад "Света Неделя") до Гарата, Горна баня и Княжево, който софиянци наричали трамвай.</p>
-        <img src="/img/tram1.gif" class="left">
+        <img src="../img/tram1.gif" class="left">
         <p>Историята на електрическия трамвай датира от 01.12.1898 г., когато общината отдава Концесия за
             снабдяване на града с електрическа енергия и построяване на трамвайни линии на френското дружество
             "Марсилия" и на анонимното белгийско дружество "Електрически трамваи".
@@ -123,7 +123,7 @@ css: history
             6 трамвайни маршрута с обща дължина на линиите 23 км единичен коловоз. Междурелсието е 1000 mm. София
             посреща новия ХХ век с изградена трамвайна мрежа със следните линии: От гарата през Шарения (Лъвовия)
             мост до днешния площад "Славейков".</p>
-        <img src="/img/tram2.gif" class="right">
+        <img src="../img/tram2.gif" class="right">
         <p>Първите трамвайни вагони са малки, двуосни, с два мотора по 18 kW и открити платформи, заградени с
             метални решетки. Салонът е разделен на първа и втора класа. Ремаркетата са открити, като пътниците се
             качват и слизат отстрани, а кондукторът ги обикаля по специална пътека - стъпало.
@@ -134,7 +134,7 @@ css: history
             По решение на Софийската община от 1916 г. предприятието се обособява като Дирекция на трамваите и
             осветлението (ДТО) с два отдела "Трамваи" и "Осветление", начело с директор и двама началници на отдели:
             "Трамваи" и "Осветление".</p>
-        <img src="/img/tram3.gif" class="left">
+        <img src="../img/tram3.gif" class="left">
         <p>От 1927 г. отдел "Трамваи" се разделя на две отделения: "Движение" и "Техническа работилница". Тази
             форма на управление се запазва до края на 1948г., когато отдел "Осветление", се отделя и към общината се
             създава СП (Стопанско предприятие) "Софийски градски пътнически транспорт" - трамваи, тролейбуси и
@@ -149,7 +149,7 @@ css: history
             желязна конструкция , производство на МАН - ЕАГ; мотриси от МАН - Сименс , ремаркета с една средна врата
             , от фабриките "Юрдинген и Вегман" ; мотриси от фабриката "Ернесто Бреда - Милано", с електрическа част
             от "Ансалдо Марелли".</p>
-        <img src="/img/tram4.gif" class="right">
+        <img src="../img/tram4.gif" class="right">
         <p>На базата на натрупания опит от ремонт, като са използвани шасита на бракувани трамваи, през 1931 г. под
             ръководството на инж. Кардалев се произвеждат първите български ремаркета, а през 1935 г. са били
             построени изцяло 12 ремаркета.
@@ -157,7 +157,7 @@ css: history
             след края на Втората световна война се премества Главната техническа работилница. 1936г. започва
             производството на първите български двуосни трамвайни мотриси с вносни контролери и мотори.
             В края на 1951г. техническата работилница се обособява като самостоятелен завод.</p>
-        <img src="/img/tram5.gif" class="left">
+        <img src="../img/tram5.gif" class="left">
         <p>През 1952 г. СП "Градски пътнически транспорт" се разделя на две предприятия: СП "Софийски
             автотранспорт" и СП "Софийски градски електротранспорт". В 1956 г. дейността по ремонта на трамваите и
             тролейбусите се поема от СП "Софийски градски електротранспорт". През 1959г. експлоатационните
@@ -170,7 +170,7 @@ css: history
             - едносъчленен, а на 01.05.1970г. "София 70" - двойносъчленен ; в 1979г. "София 100" - едносъчленен; а
             през 1981г., по случай 1300-годишнината от създаването на българската държава, трамвай "България 1300" ,
             двойно-съчленен, осемосен.</p>
-        <img src="/img/tram6.gif" class="right">
+        <img src="../img/tram6.gif" class="right">
         <p>Следващите години, отчитайки недостатъците на тези трамваи, започва подготовка за изграждане на нов тип
             конструкция с карданно задвижване и през 1986 г. първата трамвайна мотриса тип "Т6М-700" е пусната в
             експлоатация. На базата на този трамвай през 1987 г. започва производството на мотриси за междурелсие
@@ -182,7 +182,7 @@ css: history
             За периода 1990-1991 г. са внесени 40 броя чешки трамваи тип "Т6А2" - 1009 мм. Същата година, на базата
             на едносъчленен "Т6М-700М", е произведен един двойно-съчленен трамвай "Т8М-900", след което е спряно
             производството на български трамваи.</p>
-        <img src="/img/tram7.gif" class="left">
+        <img src="../img/tram7.gif" class="left">
         <p>През 1995г. е пусната новата трамвайна линия №22 от квартал "Изток" до "Младежки театър", за което са
             внесени от Германия 29 броя трамваи, втора употреба "Дюваг".
             През 1998г. започва модернизиране на трамваите "Т6М - 700М".От месец декември 1999г. започва
@@ -193,7 +193,7 @@ css: history
             Непосредствено с увеличаване на трамвайния парк продължава и изграждането на трамвайната мрежа. Общата
             дължина на релсовия път в 1944г. е 79,3 км единичен коловоз. В периода до края на втората световна война
             е изградена основата на сега съществуващата трамвайна мрежа в София.</p>
-        <img src="/img/tram8.gif" class="right">
+        <img src="../img/tram8.gif" class="right">
         <p>От 19.05.1998г. се създава СКГТ - Електротранспорт - ЕАД, което от 08.12.1999г. е самостоятелно
             Акционерно дружество, което управлява трамвайния и тролейбусния транспорт на гр. София.
             От декември 2002 г. структурата се променя, като се обособява самостоятелно ЕАД - Столичен
@@ -211,7 +211,7 @@ css: history
             Към 20 юли 2016 г. има обща дължина 40 km с 35 метростанции.
             Метрото е обявено за национален обект, което означава, че неговото строителство се финансира както от
             общинския, така и от националния бюджет, а също и от европейски фондове. </p>
-        <img src="/img/metro1.jpg" class="left">
+        <img src="../img/metro1.jpg" class="left">
         <p>Първите проучвания и планове за строителство на подземен транспорт в столицата са осъществени в края на
             1960-те години.
             Първите строителни работи започват на 6 март 1978 г. по най-натоварената линия в ж.к. „Люлин“, като
@@ -225,7 +225,7 @@ css: history
             след 1995 г. През 2004 г. започва подготовката, а през 2005 г. – и строителство на продължението на
             Първи метродиаметър през центъра на града от пл. „Независимост“ до „Интерпред“ в кв. „Изгрев“ с нов
             участък от 4,8 km и 3 метростанции.</p>
-        <img src="/img/metro2.jpg" class="right">
+        <img src="../img/metro2.jpg" class="right">
         <p>На 28 януари 1998 г. е въведен в експлоатация първият участък от първия радиус на „Първи метродиаметър“ с
             5 метростанции и дължина 6,5 km. В експлоатация влизат метростанциите „Сливница“, „Люлин“, „Западен
             парк“, „Вардар“ и „Константин Величков“.
@@ -234,7 +234,7 @@ css: history
             8,1 km със 7 метростанции.На 20 април 2003 г. е въведена в експлоатация метростанция „Обеля“, като
             действащият участък се свързва с ж.к. „Обеля“ с нов участък от 1,8 km, като с това първият радиус е
             изграден.</p>
-        <img src="/img/metro3.jpg" class="left">
+        <img src="../img/metro3.jpg" class="left">
         <p>На 8 май 2009 г. е въведен в експлоатация нов радиус от Първи метродиаметър с дължина 5,7 km и 5
             метростанции. В експлоатация влизат метростанциите: „Стадион „Васил Левски“, „Жолио Кюри“, „Г. М.
             Димитров“, „Мусагеница“ и „Младост 1“. Метростанция „СУ „Св. Климент Охридски“ не е пусната в
@@ -248,7 +248,7 @@ css: history
             ван Ромпой, са открити метростанциите „Цариградско шосе“ и „Младост 3“.
             На 31 август 2012 г. на официална церемония, в присъствието на председателя на Европейската комисия Жозе
             Мануел Барозу, е пуснат в експлоатация втори метродиаметър с дължина 13 km и 11 метростанции.</p>
-        <img src="/img/metro4.jpg" class="right">
+        <img src="../img/metro4.jpg" class="right">
         <p>На 2 април 2015 г. на официална церемония, в присъствието на премиера Бойко Борисов, кмета на София
             Йорданка Фандъкова, министъра на транспорта Ивайло Московски, министъра на регионалното развитие и
             благоустройството Лиляна Павлова и министъра на околната среда и водите Ивелина Василева, е открит
