Added new section and transitions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ css: index
                 <p class="news-description">Хартиеното билетче ще бъде заменено от електронно, а превозните средства ще
                     се оборудват с камери. ,,2019-та е годината, в която очакваме новата система да е напълно завършена.
                     Тогава ще плащаме за време или брой спирки, а не както е сега – един билет за едно превозно
-                    средство, а перфораторите отиват в музея на София – там, където им е мястото”, заяви Христиан Петров,
+                    средство, а перфораторите отиват в музея на София – там, където им е мястото”, заяви Христиан
+                    Петров,
                     изпълнителен директор на ЦГМ.</p>
             </li>
             <li>
@@ -39,9 +40,22 @@ css: index
             <a href="{{ site.baseurl }}/news">Виж всички<i class="fas fa-chevron-right"></i></a>
         </p>
     </section>
+    <section class="picofthemonth-section">
+        <h2>Снимка на месеца</h2>
+        <div class="container">
+            <img src="../img/picjuly.jpg">
+            <div class="overlay">
+                <p class="text">Автобус Mercedes Intouro по линия 166 във Витоша</p>
+            </div>
+        </div>
+    </section>
     <section class="newinsite-section">
         <h2>Какво ново има в сайта?</h2>
-        <p>Лорем Ипсум</p>
+        <ul>
+            <li>Добавена секция ,,Снимка на месеца"</li>
+            <li>Новините са обновени</li>
+            <li>Добавени нови анимации в сайта</li>
+        </ul>
     </section>
     <section class="subscribe-section">
         <h2>Абониране за нашия бюлетин</h2>
