--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ css: index
     <section class="picofthemonth-section">
         <h2>Снимка на месеца</h2>
         <div class="container">
-            <img src="../img/picjuly.jpg">
+            <img src="img/picjuly.jpg">
             <div class="overlay">
                 <p class="text">Автобус Mercedes Intouro по линия 166 във Витоша</p>
             </div>
